<resources>
    <string name="app_name">Neat Wallpapers</string>
    <string name="popular">Popular Fragment</string>
    <string name="recent">Recent Fragment</string>
    <string name="random">Random Fragment</string>
    <string name="categories">Categories Fragment</string>
    <string name="colors">Colors Fragment</string>
    <string name="favorites">Favorites Fragment</string>
    <string name="sort_action_title">Sort</string>
    <string name="set_as">Set as</string>
    <string name="download">Download</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="exit_confirmation_dialog_string">Are you sure you want to exit?</string>
    <string name="exit_confirmation_positive_button_string">Exit</string>
    <string name="exit_confirmation_negative_button_string">Cancel</string>
    <string name="popular_fragment_tag">POPULAR</string>
    <string name="recent_fragment_tag">RECENT</string>
    <string name="categories_fragment_tag">CATEGORIES</string>
    <string name="colors_fragment_tag">COLORS</string>
    <string name="favorites_fragment_tag">FAVORITES</string>
    <string name="image_content_description">image</string>
    <string name="search_action_title">Search</string>
    <string name="search_hint">Enter search value</string>
    <string name="author_info">Author: %1$s</string>
    <string name="pixabay_link">View on Pixabay</string>
    <string name="image_successfully_saved_message">Image successfully saved</string>
    <string name="toast_image_successfully_saved">Image is successfully saved!</string>
    <string name="problem_downloading_image_message">Problem while downloading image, please try again</string>
    <string name="problem_while_setting_wallpaper_message">Problem while setting wallpaper</string>
    <string name="image_added_to_favorites_message">Image is added to Favorites</string>
    <string name="image_removed_from_favorites_message">Image is removed from Favorites</string>
    <string name="setting_wallpaper_message">Setting image as wallpaper&#8230;</string>
    <string name="message_downloading_image">Please wait while image is being downloaded</string>
    <string name="title_downloading_image">Downloading</string>
    <string name="category_image">Category image</string>
    <string name="category_icon">category_icon</string>
    <string name="color_image">color image</string>
    <string name="color_icon">color_icon</string>
    <string name="image_already_exists_message">Image already exists. Check your Gallery.</string>
    <string name="permission_granted_message">Permission is granted</string>
    <string name="download_permission_message">You need to grant permission to save image into your device in order to download it. Please go to Neat Wallpapers Settings - Permissions - and grant the Storage permission.</string>
    <string name="upload_permission_message">You need to grant permission to read image from your device in order to update your profile image. Please go to Neat Wallpapers Settings - Permissions - and grant the Storage permission.</string>
    <string name="permission_dialog_positive_button">Go to settings</string>
    <string name="permission_dialog_negative_button">Cancel</string>
    <string name="problem_while_creating_directory_message">There was a problem while creating Neat Wallpapers directory!</string>
    <string name="unfortunately_there_are_no_results_for_this_request">Unfortunately there are no results for this request.</string>
    <string name="full_image_description">Full image</string>
    <string name="favorites_action_title">Favorites</string>
    <string name="up_action_title">Up button</string>
    <string name="download_action_title">Download</string>
    <string name="set_action_title">Set</string>
    <string name="wallpaper_manager_option_standard">STANDARD</string>
    <string name="wallpaper_manager_option_entire">ENTIRE</string>
    <string name="wallpaper_manager_option_free">FREE</string>
    <string name="wallpaper_manager_option_others">OTHERS</string>
    <string name="success_dialog_message">It\'s done. Do you want to go to home screen and check out how it looks?</string>
    <string name="success_dialog_positive_button">Check it out</string>
    <string name="success_dialog_negative_button">Stay</string>
    <string name="success_dialog_title">SUCCESS</string>
    <string name="download_cancelled_message">Download is cancelled</string>
    <string-array name="categories_names">
        <item>Animals</item>
        <item>Art</item>
        <item>Buildings</item>
        <item>Cars</item>
        <item>Colors</item>
        <item>Fantasy</item>
        <item>Food</item>
        <item>HD</item>
        <item>Love</item>
        <item>Music</item>
        <item>Monuments</item>
        <item>Nature</item>
        <item>Patterns</item>
        <item>People</item>
        <item>Space</item>
        <item>Sports</item>
        <item>Textures</item>
        <item>Travel</item>
        <item>Vintage</item>
    </string-array>
    <string-array name="categories_keywords">
        <item>animals</item>
        <item>oil paintings</item>
        <item>building</item>
        <item>car</item>
        <item>colors</item>
        <item>fantasy</item>
        <item>food</item>
        <item>user:unsplash</item>
        <item>love</item>
        <item>music</item>
        <item>monuments</item>
        <item>nature landscape</item>
        <item>material background</item>
        <item>people</item>
        <item>space stars</item>
        <item>sports</item>
        <item>textures</item>
        <item>travel</item>
        <item>vintage</item>
    </string-array>
    <string name="email">Email</string>
    <string name="fullname">Full Name</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Neat Wallpapers</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_link_to_register">New here? Sign up!</string>
    <string name="btn_link_to_login">Already registered? Sign in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter email associated with your account and we will send you password reset link</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_logo_content_description">Login page logo</string>
    <string name="account_action_title">Account</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_action_title">Settings</string>
    <string name="account_profile_picture">Profile picture</string>
    <string name="account_logout_button_text">Log out</string>
    <string name="hint_account_name">Name</string>
    <string name="hint_account_email">Email</string>
    <string name="account_change_profile_picture_button_text">Change Picture</string>
    <string name="account_save_changes_text">Save Changes</string>
    <string name="account_remove_account_text">Remove account</string>
    <string name="profile_removed_success_message">Your account is removed. Create new account now!</string>
    <string name="profile_removed_fail_message">Failed to remove your account!</string>
    <string name="btn_login_with_google">Sign in with Google</string>
    <string name="account_remove_dialog_positive_button">Remove</string>
    <string name="account_remove_dialog_negative_button">Cancel</string>
    <string name="account_remove_account_dialog_message">Are you sure you want to remove your account and lose all your favorite images?</string>
    <string name="account_remove_account_dialog_title">Remove account</string>
    <string name="empty_email_error_message">Please, enter email address!</string>
    <string name="empty_password_error_message">Please, enter password!</string>
    <string name="pixabay_key">3898774-ad29861c5699760086a93892b</string>
    <string name="firebase_web_client_id">709828608877–8p2vakdp21cjdbitu7uv1bqumts9gs3j.apps.googleusercontent.com</string>
    <string name="admob_app_id">ca-app-pub-5015291550861860~9287306639</string>
    <string name="ad_unit_id_main_activity">ca-app-pub-5015291550861860/4577905431</string>
    <string name="ad_unit_id_single_category_activity">ca-app-pub-5015291550861860/4485017037</string>
    <string name="ad_unit_id_search_results_activity">ca-app-pub-5015291550861860/2982663830</string>
    <string name="google_sign_in_fail_message">Google sign in failed</string>
    <string name="message_login">Logging in</string>
    <string name="reset_password_success_message">Check your email for instructions to reset your password</string>
    <string name="reset_password_fail_message">Failed to send reset email! Please try again.</string>
    <string name="message_reset_password">Sending reset email</string>
    <string name="reset_password_empty_email_message">Enter your registered email address!</string>
    <string name="change_image_error_message">There was a problem with picking image. Please try again</string>
    <string name="account_data_changed_success_message">Your account data successfully changed</string>
    <string name="profile_picture_upload_fail_message">There was a problem while uploading your profile picture. Please try again</string>
    <string name="account_data_changed_fail_message">There was a problem while saving your data</string>
    <string name="downloading_favorites_fail_message">There was a problem while fetching your favorites from database. Please try again</string>
    <string name="tutorial_swipe_right">Swipe\nright</string>
    <string name="tutorial_swipe_right_icon_content_description">Swipe Right Tutorial Icon</string>
    <string name="tutorial_tap_text">Touch in this area to see more details</string>
    <string name="tutorial_got_it">Got it</string>
    <string name="tutorial_swipe_left_icon_content_description">Tutorial Swipe Left Icon</string>
    <string name="tutorial_swipe_left_text">Swipe left</string>
    <string name="tutorial_tap_icon_content_description">Tutorial tap icon</string>
</resources>