<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tutorial_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77000000"
    android:clickable="true"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="1"
    tools:showIn="@layout/activity_single_image"
    android:visibility="gone"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/swipe_right_tutorial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".25"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/swipe_right_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/swipe_right_icon"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/tutorial_swipe_right_icon_content_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tutorial_swipe_right"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tutorial_tap_text_size" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/touch_tutorial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tutorial_tap_icon_content_description"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/tap_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/tutorial_tap_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tutorial_tap_text_size" />


        <TextView
            android:id="@+id/gotit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/tutorial_got_it"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tutorial_gotit_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/swipe_left_tutorial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".25"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/swipe_left_image"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/swipe_left_icon"
            android:contentDescription="@string/tutorial_swipe_left_icon_content_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tutorial_swipe_left_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tutorial_tap_text_size" />
    </LinearLayout>
</LinearLayout>